# pycomets

./: .gitignore  README.md  pyproject.toml  tox.ini
pycomets/: README.Rmd  coin.py  comet.py  comets.py  example.py  gcm.py  helper.py  pcm.py  regression.py  utils.py
pycomets/inst/: README.Rmd  check_dgp.R  check_dgp.py
pycomets/inst/simulated_data/: sim0.csv  sim1.csv  sim10.csv  sim11.csv  sim12.csv  sim13.csv  sim14.csv  sim15.csv  sim16.csv  sim17.csv  sim18.csv  sim19.csv  sim2.csv  sim20.csv  sim21.csv  sim22.csv  sim23.csv  sim24.csv  sim25.csv  sim26.csv  sim27.csv  sim28.csv  sim29.csv  sim3.csv  sim30.csv  sim31.csv  sim32.csv  sim33.csv  sim34.csv  sim35.csv  sim36.csv  sim37.csv  sim38.csv  sim39.csv  sim4.csv  sim40.csv  sim41.csv  sim42.csv  sim43.csv  sim44.csv  (+60 more)
test/: test_utils.py
